--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">= 8.0.x"
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "0.19.0-beta.1",
     "axios-retry": "3.1.2",
     "glob": "^7.1.3",
     "uniqid": "5.0.3"
